examples/bad/runtime_error.mtch
int main() {
    int a = 8;
    int b = 0;
    string s = "Test";

    int c = a / b;

    return 0;
}